--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "fetch-forms": "node dist/processing/fetchForms.js",
     "clean-fetch-forms": "rm -rf data && npm run build && npm run fetch-forms data",
+    "clean-build-map": "npm run build && node dist/processing/buildMap.js",
     "build": "node_modules/.bin/tsc --project tsconfig.json",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx"
   },
